fixed all texts, images and gaps for mobile and tablet devices

--- a/src/styles/blocks/_article.scss
+++ b/src/styles/blocks/_article.scss
@@ -17,7 +17,7 @@
 
   &__content {
     @include onMobile {
-      max-width: 320px;
+      max-width: 350px;
     }
   }
 
@@ -53,6 +53,10 @@
 
     @include onTablet {
       padding-left: 20px;
+    }
+
+    @include onMobile {
+      padding-left: 0;
     }
   }
 }
