--- a/src/styles/blocks/_benefits.scss
+++ b/src/styles/blocks/_benefits.scss
@@ -31,10 +31,6 @@
       max-width: 350px;
       justify-self: center;
     }
-
-    @include onMobile {
-      max-width: 320px;
-    }
   }
 
   &__icon {
