--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -48,19 +48,16 @@
       margin-bottom: 110px;
     }
   }
+
   &__heading {
     padding-top: 80px;
     max-width: 380px;
 
     @include onTablet {
-      max-width: 330px;
       padding-top: 0;
     }
-
-    @include onMobile {
-      max-width: 320px;
-    }
   }
+  
   &__title {
     @include desktopH1;
     margin-bottom: 30px;
