--- a/src/styles/blocks/_mobile-nav.scss
+++ b/src/styles/blocks/_mobile-nav.scss
@@ -4,15 +4,15 @@
   justify-content: space-between;
   align-items: center;
   padding: 40px 15px;
+  
   position: absolute;
   top: -100%;
   right: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba($color-american-silver, 0.95);
-  z-index: 6;
-  // background: linear-gradient(0deg, rgba(247,247,247,1) 0%, rgba(208,208,208,1) 43%, rgba(124,124,124,1) 100%);
-  // opacity: 0.95;
+
+  @include mobile-nav-bg-color;
+  opacity: 0.95;
 
   transition: top $transition-duration ease;
 
