--- a/src/styles/blocks/_technology.scss
+++ b/src/styles/blocks/_technology.scss
@@ -49,7 +49,7 @@
     background-position: top center;
 
     @include onMobile {
-      max-width: 320px;
+      max-width: 350px;
     }
   }
 
