--- a/src/styles/utilities/_mixins.scss
+++ b/src/styles/utilities/_mixins.scss
@@ -15,3 +15,11 @@
     @content;
   }
 }
+
+@mixin mobile-nav-bg-color {
+  background: linear-gradient(
+    0deg,
+    rgba(247,247,247,1) 0%,
+    rgba(208,208,208,1) 43%,
+    rgba(124,124,124,1) 100%);
+}
